--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>com.cboy</groupId>
     <artifactId>tiny-nene</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>connection</module>
+        <module>biz</module>
+        <module>infrastructure</module>
+        <module>middleware</module>
+        <module>common</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
