--- a/connection/pom.xml
+++ b/connection/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.cboy</groupId>
         <artifactId>tiny-nene</artifactId>
-        <version>${revision}</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>connection</artifactId>
@@ -26,6 +26,11 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
